fix main-content issue on firefox and ie

--- a/static/css/course.less
+++ b/static/css/course.less
@@ -979,7 +979,7 @@
 
     &.course-intro {
       .main-content {
-        margin-top: -695px;
+        margin-top: -655px;
         @media (max-width: 1366px) {
           margin-top: -440px;
         }
@@ -1006,7 +1006,7 @@
 
     &.course-list {
       .main-content {
-        margin-top: -695px;
+        margin-top: -655px;
         @media (max-width: 1366px) {
           margin-top: -440px;
         }
