--- a/static/css/main.less
+++ b/static/css/main.less
@@ -315,9 +315,10 @@ body {
 // ********************************************************************* //
 
 .main-nav {
-    position: relative;
+    position: absolute;
     z-index: 9;
     height: 40px;
+    width: 100%;
 
     ul {
         position: relative;
