--- a/static/css/page.less
+++ b/static/css/page.less
@@ -37,7 +37,7 @@
   @media (min-width: @screen-sm-min) {
 
     .main-content {
-      margin-top: -695px;
+      margin-top: -655px;
       @media (max-width: 1366px) {
         margin-top: -440px;
       }
